// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented 1`] = `
<div
  style="width:100%;opacity:0"
>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jA-dDXy"
  >
    <span
      aria-label="vote"
      class="DebateStepPageVoteForm___StyledSpan2-sc-89or92-2 gBdWGG"
      role="img"
    >
      🎉
    </span>
    <span>
      thanks-for-debate-richer
    </span>
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
      type="button"
    >
      delete.vote.against
    </button>
  </div>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 fXlkxX hmLkpw"
  >
    <a
      class="twitter-share-button"
      data-show-count="false"
      href="https://twitter.com/share?ref_src=twsrc%5Etfw"
    >
      Tweet
    </a>
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cRPoGN gQREUn"
      type="button"
    >
      <iconmock
        class="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 kGTwVK gtEoKs KA-deO icon"
      />
      global.link
    </button>
  </div>
  <div
    class="sc-bdnylx lgXcQA DebateStepPageVoteForm___StyledCard-sc-89or92-3 gXzbu"
  >
    <form
      class="DebateStepPageVoteForm__Form-sc-89or92-0 cEBedW"
      id="debate-argument-form"
    >
      <div
        class="form-group"
      >
        <textarea
          aria-describedby="body-error "
          aria-invalid="false"
          autocomplete="off"
          class="form-control"
          id="body"
          minlength="1"
          name="body"
          placeholder="why-are-you-against"
          style="pointer-events:auto"
          type="textarea"
        />
        <div
          class="Notepad__Container-zxztj1-0 dDbxVX visible-print-block"
        >
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
        </div>
      </div>
      <div
        class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 Aouvj"
      >
        <button
          class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 vNxBw engGlZ"
          type="button"
        >
          global.cancel
        </button>
        <button
          class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU haoEhH"
          type="submit"
        >
          argument.publish.mine
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented not confirmed 1`] = `
<div
  style="width:100%;opacity:0"
>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jA-dDXy"
  >
    <span
      aria-label="vote"
      class="DebateStepPageVoteForm___StyledSpan2-sc-89or92-2 gBdWGG"
      role="img"
    >
      🎉
    </span>
    <span>
      publish.argument.validate.account
    </span>
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
      type="button"
    >
      delete.vote.against
    </button>
  </div>
  <div
    class="sc-bdnylx lgXcQA DebateStepPageVoteForm___StyledCard-sc-89or92-3 gXzbu"
  >
    <form
      class="DebateStepPageVoteForm__Form-sc-89or92-0 cEBedW"
      id="debate-argument-form"
    >
      <div
        class="form-group"
      >
        <textarea
          aria-describedby="body-error "
          aria-invalid="false"
          autocomplete="off"
          class="form-control"
          id="body"
          minlength="1"
          name="body"
          placeholder="why-are-you-against"
          style="pointer-events:auto"
          type="textarea"
        />
        <div
          class="Notepad__Container-zxztj1-0 dDbxVX visible-print-block"
        >
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
        </div>
      </div>
      <div
        class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 Aouvj"
      >
        <button
          class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 vNxBw engGlZ"
          type="button"
        >
          global.cancel
        </button>
        <button
          class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU haoEhH"
          type="submit"
        >
          argument.publish.mine
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented not confirmed on mobile 1`] = `
<div
  style="width:100%;opacity:1"
>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jA-dDXy"
  >
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
      type="button"
    >
      delete.vote.against
    </button>
    <p
      class="sc-bdnylx dzpbOH"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan-sc-89or92-1 bypLWg"
        role="img"
      >
        🎉
      </span>
      <span>
        publish.argument.validate.account
      </span>
    </p>
  </div>
  <button
    class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cWJmph haoEhH"
    type="button"
  >
    publish-argument
  </button>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented on mobile 1`] = `
<div
  style="width:100%;opacity:1"
>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jA-dDXy"
  >
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
      type="button"
    >
      delete.vote.against
    </button>
    <p
      class="sc-bdnylx dzpbOH"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan-sc-89or92-1 bypLWg"
        role="img"
      >
        🎉
      </span>
      <span>
        thanks-for-debate-richer
      </span>
    </p>
  </div>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 fXlkxX hmLkpw"
  >
    <a
      class="twitter-share-button"
      data-show-count="false"
      href="https://twitter.com/share?ref_src=twsrc%5Etfw"
    >
      Tweet
    </a>
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cRPoGN gQREUn"
      type="button"
    >
      <iconmock
        class="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 kGTwVK gtEoKs KA-deO icon"
      />
      global.link
    </button>
  </div>
  <button
    class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cWJmph haoEhH"
    type="button"
  >
    publish-argument
  </button>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted 1`] = `
<div
  style="width:100%;opacity:0"
>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jA-dDXy"
  >
    <span
      aria-label="vote"
      class="DebateStepPageVoteForm___StyledSpan2-sc-89or92-2 gBdWGG"
      role="img"
    >
      🗳️
    </span>
    <span>
      thanks-for-your-vote
    </span>
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
      type="button"
    >
      delete.vote.against
    </button>
  </div>
  <div
    class="sc-bdnylx lgXcQA DebateStepPageVoteForm___StyledCard-sc-89or92-3 gXzbu"
  >
    <form
      class="DebateStepPageVoteForm__Form-sc-89or92-0 cEBedW"
      id="debate-argument-form"
    >
      <div
        class="form-group"
      >
        <textarea
          aria-describedby="body-error "
          aria-invalid="false"
          autocomplete="off"
          class="form-control"
          id="body"
          minlength="1"
          name="body"
          placeholder="why-are-you-against"
          style="pointer-events:auto"
          type="textarea"
        />
        <div
          class="Notepad__Container-zxztj1-0 dDbxVX visible-print-block"
        >
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
        </div>
      </div>
      <div
        class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 Aouvj"
      >
        <button
          class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 vNxBw engGlZ"
          type="button"
        >
          global.cancel
        </button>
        <button
          class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU haoEhH"
          type="submit"
        >
          argument.publish.mine
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted anonymously 1`] = `
<div
  style="width:100%;opacity:0"
>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jA-dDXy"
  >
    <span
      aria-label="vote"
      class="DebateStepPageVoteForm___StyledSpan2-sc-89or92-2 gBdWGG"
      role="img"
    >
      🗳️
    </span>
    <span>
      thanks-for-your-vote {"instance":"CapCollectif"}
    </span>
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
      type="button"
    >
      delete.vote.against
    </button>
  </div>
  <div
    aria-controls="popover-overlay"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="sc-bdnylx lgXcQA DebateStepPageVoteForm___StyledCard-sc-89or92-3 gXzbu"
    type="button"
  >
    <form
      class="DebateStepPageVoteForm__Form-sc-89or92-0 gpNHGt"
      disabled=""
      id="debate-argument-form"
    >
      <div
        class="form-group"
      >
        <textarea
          aria-describedby="body-error "
          aria-invalid="false"
          autocomplete="off"
          class="form-control"
          id="body"
          minlength="1"
          name="body"
          placeholder="why-are-you-against"
          style="pointer-events:none"
          type="textarea"
        />
        <div
          class="Notepad__Container-zxztj1-0 dDbxVX visible-print-block"
        >
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
        </div>
      </div>
    </form>
  </div>
  <div
    aria-label="vote.popover.title"
    class="sc-bdnylx LoginOverlay__PopoverContainer-c0lhnx-0 cNFNYl rLblB"
    data-dialog="true"
    hidden=""
    id="login-popover"
    role="dialog"
    style="display:none;position:fixed;left:100%;top:100%"
    tabindex="0"
  >
    <div
      class="sc-bdnylx LoginOverlay__Arrow-c0lhnx-2 kGqIZa hoKyqX"
      style="font-size:30px;width:1em;height:1em;pointer-events:none;bottom:100%"
    >
      <svg
        style="transform:rotateZ(360deg)"
        viewBox="0 0 30 30"
      >
        <path
          class="stroke"
          d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
        />
        <path
          class="fill"
          d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
        />
      </svg>
    </div>
    <div
      class="sc-bdnylx eWkbGr"
    >
      <p
        class="sc-bdnylx YLtjJ"
      >
        vote.popover.title
      </p>
      <div
        class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 kIsWfm cRYDhl"
      >
        <p
          class="sc-bdnylx jEhuac"
        >
          vote.popover.body
        </p>
        <span
          class="sc-bdnylx bgIGJQ"
          clip="rect(0px, 0px, 0px, 0px)"
        >
          <button
            class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 khpBZc gQREUn"
            type="button"
          >
            global.close
          </button>
        </span>
        <span>
          <button
            aria-label="open.connection_modal"
            class="center-block btn-block login-button btn btn-success"
            destination="http://localhost"
            type="button"
          >
            global.login
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted anonymously on mobile 1`] = `
<div
  style="width:100%;opacity:1"
>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jA-dDXy"
  >
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
      type="button"
    >
      delete.vote.against
    </button>
    <p
      class="sc-bdnylx dzpbOH"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan-sc-89or92-1 bypLWg"
        role="img"
      >
        🗳️
      </span>
      <span>
        thanks-for-your-vote {"instance":"CapCollectif"}
      </span>
    </p>
  </div>
  <button
    aria-controls="popover-overlay"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cWJmph haoEhH"
    type="button"
  >
    publish-argument
  </button>
  <div
    aria-label="vote.popover.title"
    class="sc-bdnylx LoginOverlay__PopoverContainer-c0lhnx-0 cNFNYl rLblB"
    data-dialog="true"
    hidden=""
    id="login-popover"
    role="dialog"
    style="display:none;position:fixed;left:100%;top:100%"
    tabindex="0"
  >
    <div
      class="sc-bdnylx LoginOverlay__Arrow-c0lhnx-2 kGqIZa hoKyqX"
      style="font-size:30px;width:1em;height:1em;pointer-events:none;bottom:100%"
    >
      <svg
        style="transform:rotateZ(360deg)"
        viewBox="0 0 30 30"
      >
        <path
          class="stroke"
          d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
        />
        <path
          class="fill"
          d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
        />
      </svg>
    </div>
    <div
      class="sc-bdnylx eWkbGr"
    >
      <p
        class="sc-bdnylx YLtjJ"
      >
        vote.popover.title
      </p>
      <div
        class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 kIsWfm cRYDhl"
      >
        <p
          class="sc-bdnylx jEhuac"
        >
          vote.popover.body
        </p>
        <span
          class="sc-bdnylx bgIGJQ"
          clip="rect(0px, 0px, 0px, 0px)"
        >
          <button
            class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 khpBZc gQREUn"
            type="button"
          >
            global.close
          </button>
        </span>
        <span>
          <button
            aria-label="open.connection_modal"
            class="center-block btn-block login-button btn btn-success"
            destination="http://localhost"
            type="button"
          >
            global.login
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted on mobile 1`] = `
<div
  style="width:100%;opacity:1"
>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jA-dDXy"
  >
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
      type="button"
    >
      delete.vote.against
    </button>
    <p
      class="sc-bdnylx dzpbOH"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan-sc-89or92-1 bypLWg"
        role="img"
      >
        🗳️
      </span>
      <span>
        thanks-for-your-vote
      </span>
    </p>
  </div>
  <button
    class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cWJmph haoEhH"
    type="button"
  >
    publish-argument
  </button>
</div>
`;
